services/LoadBalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3000
      nodePort: 30010
