services/NodePort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-service-nodeport
spec:
  type: NodePort
  selector:
    app: ms-service-nodeport
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3000
      nodePort: 30008
