services/ingress-muli-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  labels:
    name: myapp
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /analytic
        backend:
          service:
            name: analytic-service
            port: 
              number: 8080
      - path: /shopping 
        backend:
          service:
            name: shopping-service
            port:
              number: 8080
